--- a/brianchan.me/programming-challenges.html
+++ b/brianchan.me/programming-challenges.html
@@ -60,7 +60,7 @@
 					<img src="https://raw.githubusercontent.com/briancha/programming-challenges/master/Convert%20Decimal%20to%20Octal/screenshot.png" alt="Convert Decimal to Octal screenshot" />
 				</p>
 				<p>
-					<div class="col-md-6 alert alert-info" role="alert">
+					<div class="col-sm-8 col-md-6 alert alert-info" role="alert">
 						<a href="https://github.com/briancha/programming-challenges/blob/master/Convert%20Decimal%20to%20Octal/convertDecimalToOctal.java">
 							Check it out on GitHub
 						</a>
@@ -75,8 +75,23 @@
 					<img src="https://raw.githubusercontent.com/briancha/programming-challenges/master/Find%20Palindromes/screenshot.png" alt="Simple Interest Calculator screenshot" />
 				</p>
 				<p>
-					<div class="col-md-6 alert alert-info" role="alert">
+					<div class="col-sm-8 col-md-6 alert alert-info" role="alert">
 						<a href="https://github.com/briancha/programming-challenges/blob/master/Find%20Palindromes/findPalindromes.java">
+							Check it out on GitHub
+						</a>
+					</div>
+				</p>
+            </div>
+			
+			<div class="col-sm-6 col-md-4">
+				<h2>Exponentiation</h2>
+				<p>Java doesn't use the caret (^) for exponents, so I created my own method. Takes in the base and exponent.</p>
+				<p>
+					<img src="https://raw.githubusercontent.com/briancha/programming-challenges/master/Exponentiation/screenshot.png" alt="Simple Interest Calculator screenshot" />
+				</p>
+				<p>
+					<div class="col-sm-8 col-md-6 alert alert-info" role="alert">
+						<a href="https://github.com/briancha/programming-challenges/blob/master/Exponentiation/Exponent.java">
 							Check it out on GitHub
 						</a>
 					</div>
