--- a/brianchan.me/tip-calculator.html
+++ b/brianchan.me/tip-calculator.html
@@ -44,7 +44,7 @@
 
     <div class="container">
 		<div class="page-header">
-			<h1>Android Apps</h1>
+			<h1>Tip Calculator</h1>
 			<ol class="breadcrumb">
 			  <li><a href="index.html">Home</a></li>
 			  <li><a href="portfolio.html">Portfolio</a></li>
@@ -65,7 +65,7 @@
 			</div>          
 		</div>
 		
-		<div class="row col-sm-6 col-md-4">
+		<div class="col-sm-6 col-md-4">
 			  <div class="alert alert-info" role="alert">
 				<a href="https://github.com/briancha/Android-apps/tree/master/Tip%20Calculator">See the code on GitHub</a>
 			  </div>
