--- a/brianchan.me/portfolio.html
+++ b/brianchan.me/portfolio.html
@@ -35,6 +35,7 @@
 				<ul class="nav navbar-nav">
 					<li><a href="index.html">Home</a></li>
 					<li class="active"><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="books.html">Books</a></li>
 				</ul>
 			</div>
 		</div>
@@ -45,14 +46,14 @@
     <div class="container">
 
 		<div class="page-header">
-			<h1>Portfolio</h1>
+			<h1>Portfolio <small>What I've worked on</small></h1>
 			<ol class="breadcrumb">
 			  <li><a href="index.html">Home</a></li>
 			  <li class="active">Portfolio</li>
 			</ol>
 		</div>
 		
-		<div class="row">		
+		<div class="row">
             <div class="col-sm-6 col-md-4">
                 <a href="android-apps.html"><h2>Android apps</h2></a>
                 <p>Some of the apps I've made, including this awesome <a href="pizza-droid.html">Pizza Droid</a> game.</p>
