--- a/brianchan.me/index.html
+++ b/brianchan.me/index.html
@@ -35,6 +35,7 @@
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="index.html">Home</a></li>
 					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="books.html">Books</a></li>
 				</ul>
 			</div>
 		</div>
@@ -54,7 +55,7 @@
             <div class="jumbotron">
                 <h1>Java Developer</h1>
                 <p>I'm a computer science major at <a href="http://www.uis.edu">University of Illinois Springfield</a>.</p>
-				<p>I program in Java, HTML, and CSS.</p>
+				<p>I program in Java, HTML, and CSS. I also like to <a href="books.html">read</a>.</p>
 				<p>
 					Follow me on <a href="https://github.com/briancha">GitHub</a>, connect with me on <a href="https://www.linkedin.com/in/briachan">LinkedIn</a>, or email me at <a href="mailto:brian@brianchan.me">brian@brianchan.me</a>.
 				</p>
