--- a/brianchan.me/programming-challenges.html
+++ b/brianchan.me/programming-challenges.html
@@ -35,6 +35,7 @@
 				<ul class="nav navbar-nav">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="books.html">Books</a></li>
 				</ul>
 			</div>
 		</div>
