--- a/brianchan.me/tip-calculator.html
+++ b/brianchan.me/tip-calculator.html
@@ -79,9 +79,9 @@
 				Built with <a href="http://getbootstrap.com/">Bootstrap</a>.
 			</div>
 			
-			<a href="https://github.com/briancha" target="_blank"><img src="github.png" alt="GitHub icon" /></a>
-			<a href="https://www.linkedin.com/in/briachan" target="_blank"><img src="linkedin.png" alt="LinkedIn icon" /></a>		
-			<a href="mailto:brian@brianchan.me" target="_blank"><img src="email.png" alt="Email icon" /></a>		
+			<a href="https://github.com/briancha"><img src="github.png" alt="GitHub icon" /></a>
+			<a href="https://www.linkedin.com/in/briachan"><img src="linkedin.png" alt="LinkedIn icon" /></a>		
+			<a href="mailto:brian@brianchan.me"><img src="email.png" alt="Email icon" /></a>		
 		</div>
     </footer>
 	
