--- a/brianchan.me/programming-challenges.html
+++ b/brianchan.me/programming-challenges.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head lang="en">
     <!-- Latest compiled and minified CSS -->
@@ -33,9 +33,7 @@
 
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="books.html">Books</a></li>
+					<li><a href="index.html">Home</a></li><li><a href="portfolio.html">Portfolio</a></li><li><a href="books.html">Books</a></li><li><a href="blog.html">Blog</a></li>
 				</ul>
 			</div>
 		</div>
@@ -67,13 +65,28 @@
 						</a>
 					</div>
 				</p>
+            </div>			
+			
+			<div class="col-sm-6 col-md-4">
+				<h2>Exponentiation</h2>
+				<p>Java doesn't use the caret (^) for exponents, so I created my own method. Takes in the base and exponent.</p>
+				<p>
+					<img src="https://raw.githubusercontent.com/briancha/programming-challenges/master/Exponentiation/screenshot.png" alt="Exponentiation screenshot" />
+				</p>
+				<p>
+					<div class="col-sm-8 col-md-6 alert alert-info" role="alert">
+						<a href="https://github.com/briancha/programming-challenges/blob/master/Exponentiation/Exponent.java">
+							Check it out on GitHub
+						</a>
+					</div>
+				</p>
             </div>
 			
             <div class="col-sm-6 col-md-4">
 				<h2>Find Palindromes</h2>
 				<p>Takes in 2 numbers, and prints out the numbers between them that are palindromes</p>
 				<p>
-					<img src="https://raw.githubusercontent.com/briancha/programming-challenges/master/Find%20Palindromes/screenshot.png" alt="Simple Interest Calculator screenshot" />
+					<img src="https://raw.githubusercontent.com/briancha/programming-challenges/master/Find%20Palindromes/screenshot.png" alt="Find Palindromes screenshot" />
 				</p>
 				<p>
 					<div class="col-sm-8 col-md-6 alert alert-info" role="alert">
@@ -83,16 +96,16 @@
 					</div>
 				</p>
             </div>
-			
+						
 			<div class="col-sm-6 col-md-4">
-				<h2>Exponentiation</h2>
-				<p>Java doesn't use the caret (^) for exponents, so I created my own method. Takes in the base and exponent.</p>
+				<h2>Valid Parentheses</h2>
+				<p>Checks a certain set of parentheses, i.e. ((())()), and returns the number of parentheses pairs there are. If the pairing of open and closed parentheses is wrong, returns -1 pairs.</p>
 				<p>
-					<img src="https://raw.githubusercontent.com/briancha/programming-challenges/master/Exponentiation/screenshot.png" alt="Simple Interest Calculator screenshot" />
+					<img src="https://raw.githubusercontent.com/briancha/programming-challenges/master/Valid%20Parentheses/screenshot.png" alt="Valid Parentheses screenshot" />
 				</p>
 				<p>
 					<div class="col-sm-8 col-md-6 alert alert-info" role="alert">
-						<a href="https://github.com/briancha/programming-challenges/blob/master/Exponentiation/Exponent.java">
+						<a href="https://github.com/briancha/programming-challenges/blob/master/Valid%20Parentheses/validParentheses.java">
 							Check it out on GitHub
 						</a>
 					</div>
