--- a/brianchan.me/index.html
+++ b/brianchan.me/index.html
@@ -33,9 +33,7 @@
 
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="books.html">Books</a></li>
+					<li class="active"><a href="index.html">Home</a></li><li><a href="portfolio.html">Portfolio</a></li><li><a href="books.html">Books</a></li><li><a href="blog.html">Blog</a></li>
 				</ul>
 			</div>
 		</div>
